[package]
name = "gomoku"
version = "6.2.1"
authors = ["Maneren <maneren731@gmail.com>"]
edition = "2021"

[workspace]

[profile.release-debug]
inherits = "release"
strip = false
debug = true

[dependencies]
clap = "3.2.23"
num_cpus = "1.15.0"
text_io = "0.1.12"
gomoku_lib = { path = "./gomoku", features = ["jemalloc", "fen"] }
