[package]
name = "gomoku"
version = "7.1.0"
authors = ["Maneren <maneren731@gmail.com>"]
edition = "2021"

[workspace]

[profile.release-debug]
inherits = "release"
strip = false
debug = true

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
clap = "3.2.25"
num_cpus = "1.16.0"
text_io = "0.1.12"
gomoku_lib = { path = "./gomoku", features = ["jemalloc", "fen"] }
