[package]
name = "gomoku_lib"
version = "6.2.1"
authors = ["Maneren <maneren731@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
jemalloc = ["jemallocator"]
fen = ["regex"]

[dependencies]
regex = { version = "1.7.1", optional = true }
rayon = "1.6.1"

# use this in favor of std's, because it's Sync
once_cell = "1.17.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }
