[package]
name = "gomoku_lib"
version = "7.0.1"
authors = ["Maneren <maneren731@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
jemalloc = ["jemallocator"]
fen = ["regex"]

[dependencies]
regex = { version = "1.10.5", optional = true }
rayon = "1.10.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.4", optional = true }
